<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/globalDataBgColor"
    android:elevation="10dp"
    android:padding="40dp">

    <TextView
        android:id="@+id/activeCryptoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:textColor="?attr/globalDataTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/activeMarketText"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activeCryptoText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crypto"
        android:textColor="?attr/globalDataTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/activeMarketText"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeCryptoText" />

    <TextView
        android:id="@+id/activeCryptoValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10526"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/activeMarketValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeCryptoText2" />

    <TextView
        android:id="@+id/activeMarketText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/active_market"
        android:textColor="?attr/globalDataTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activeCryptoText2"
        app:layout_constraintStart_toStartOf="@+id/activeMarketValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activeMarketValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="10526"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/activeCryptoValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activeCryptoValue"
        app:layout_constraintTop_toBottomOf="@+id/activeMarketText"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>